# ChangeLog for mail-mta/netqmail
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-mta/netqmail/ChangeLog,v 1.56 2011/01/13 22:01:55 xarthisius Exp $

  13 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> netqmail-1.06.ebuild:
  ppc/ppc64 stable wrt #333915

  27 Nov 2010; Raúl Porcel <armin76@gentoo.org> netqmail-1.06.ebuild:
  ia64/s390/sh/sparc stable wrt #333915

  24 Oct 2010; Tobias Klausmann <klausman@gentoo.org> netqmail-1.06.ebuild:
  Stable on alpha, bug #333915

  19 Oct 2010; Mart Raudsepp <leio@gentoo.org> netqmail-1.05-r4.ebuild:
  Drop to ~mips

  25 Sep 2010; Markus Meier <maekke@gentoo.org> netqmail-1.06.ebuild:
  arm stable, bug #333915

  24 Aug 2010; Markos Chandras <hwoarang@gentoo.org> netqmail-1.06.ebuild:
  Stable on amd64 wrt bug #333915

  23 Aug 2010; Jeroen Roovers <jer@gentoo.org> netqmail-1.06.ebuild:
  Stable for HPPA (bug #333915).

  22 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> netqmail-1.06.ebuild:
  x86 stable wrt bug #333915

  15 Jul 2009; Mike Frysinger <vapier@gentoo.org> netqmail-1.05-r4.ebuild,
  netqmail-1.05-r8.ebuild:
  Drop bindnow-flags #226969 by Diego E. Pettenò.

  02 Jan 2009; Benedikt Böhm <hollow@gentoo.org>
  +files/1.06-readwrite.patch, netqmail-1.06.ebuild:
  fix #248229

  23 Aug 2008; Doug Goldstein <cardoe@gentoo.org> metadata.xml:
  add GLEP 56 USE flag desc from use.local.desc

*netqmail-1.06 (06 Apr 2008)

  06 Apr 2008; Benedikt Böhm <hollow@gentoo.org> +files/1.06-exit.patch,
  metadata.xml, +netqmail-1.06.ebuild:
  version bump; conversion to qmail.eclass; fixes #123897, #137207

  27 Feb 2008; Tupone Alfredo <tupone@gentoo.org> files/tcp.qmtp.sample,
  files/tcp.smtp.sample:
  Fix tcp.smtp & tcp.qmtp instruction for qmail-scanner. Bug #211672 by Martin
  Mokrejs

  31 Jan 2008; Michael Hanselmann <hansmi@gentoo.org> metadata.xml:
  Remove myself as maintainer.

  03 Dec 2007; Robin H. Johnson <robbat2@gentoo.org>