@@ -1,6 +1,10 @@
 # ChangeLog for mail-mta/netqmail
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-mta/netqmail/ChangeLog,v 1.56 2011/01/13 22:01:55 xarthisius Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-mta/netqmail/ChangeLog,v 1.57 2011/02/07 11:07:57 bangert Exp $
+
+  07 Feb 2011; Thilo Bangert <bangert@gentoo.org> netqmail-1.05-r4.ebuild,
+  netqmail-1.05-r8.ebuild, netqmail-1.06.ebuild:
+  sys-process/daemontools -> virtual/daemontools (#353211)
 
   13 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> netqmail-1.06.ebuild:
   ppc/ppc64 stable wrt #333915
